--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.main {
+  .container {
+    background-color: #141414;
+    border-radius: 5px;
+    width: 40%;
+  }
+}
+h3 {
+  color: azure;
+  font-family: "Roboto", sans-serif;
+}
+.form-label {
+  color: azure;
+  font-family: "Roboto", sans-serif;
+}
+center {
+  padding-top: 5px;
+  font-family: "Roboto", sans-serif;
+}
