--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,19 @@
 <br>
-<div class="container" style="width:70%;">
-<%= form_with(model:@user) do |f| %>
-  <div>
-     <%= f.label :name, class:'form-label' %>
-     <%= f.text_field :name,class:'form-control' %>
+<div class="main">
+<div class="container">
+<center><h3>Profile Page</h3></center>
+ <%= form_with(model:@user, local: false) do |f| %>
+  <div class="form-outline mb-2">
+      <%= f.label :name, class:'form-label' %>
+      <%= f.text_field :name,class:'form-control' %>
   </div>
   <br>
-  <div>
-     <%= f.label :profile_image,"Upload Image", class:'form-label' %>
-     <%= f.file_field :profile_image, class:'form-control' %>
+  <div class="form-outline mb-4">
+      <%= f.label :profile_image,"Upload Image", class:'form-label' %>
+      <%= f.file_field :profile_image, class:'form-control' %>
   </div>
-  <br>
-  <div>
-     <%= f.submit :submit, class: 'btn btn-primary' %>
-  </div>
-<% end %>
+      <%= f.submit :submit,class: 'btn btn-danger' %>
+ <% end %>
+<br>
 </div >
+</div>
