--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,9 @@
 <br>
 <div class="container">
-    <%= link_to "Add Product",new_product_path, remote: true, class: 'btn btn-primary btn-sm' %>
-    <%= link_to "Add Order", new_order_path, remote: true, class: 'btn btn-primary btn-sm' %>
-</div>
+    <%#= link_to "Add Product",new_product_path, remote: true, class: 'btn btn-primary btn-sm' %>
+    <%#= link_to "Add Order", new_order_path, remote: true, class: 'btn btn-primary btn-sm' %>
+    <%#= link_to "Sigh up", new_member_session_path, class: 'btn btn-primary btn-sm' %>
+</div> 
 
 <div id="myModel" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
