--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <br />
-<div >
-  <table style="border-style: solid; margin: 30px">
+<div class="container">
+  <table >
     <thead>
       <tr>
         <th>Name</th>
