--- a/app/views/products/new.js.erb
+++ b/app/views/products/new.js.erb
@@ -1,4 +1,5 @@
 $("#myModel").find(".modal-body").html("<%= j render 'form' %>");
 $("#myModel").modal("show");
 
+$("#addproduct").hide();
 $("#addproduct").after("<%= j render 'form' %>");
