--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,27 +4,29 @@
          <h6><%= message %> </h6>
      <%end%>
 <%end%>
+</div>
 <br>
 <%= form_with(model:@product, local: false) do |f| %>
   <div>
-     <%= f.label :name, class:'form-label' %> <%= f.text_field :name, class:'form-control' %>
+   <%= f.label :name %>
+   <%= f.text_field :name, class:'form-control' %>
   </div>
   <br />
   <div> 
-     <%= f.label :price, class:'form-label' %> <%= f.text_field :price,class:'form-control' %>
+     <%= f.label :price %> 
+     <%= f.text_field :price,class:'form-control' %>
   </div>
   <br />
   <div>
-     <%= f.label :category_id,class:'form-label' %>
+     <%= f.label :category_id %><br>
      <%= f.select :category_id,(Category.all.map{|e| [e.category_name, e.id]}),class:'form-control' %>
   </div>
   <br />  
   <div>
-     <%= f.label :order,"delivery_type",class:'form-label' %> <br>
+     <%= f.label :order,"delivery_type" %><br>
      <%= collection_check_boxes(:product, :order_ids, Order.all, :id, :payment_type) %>
-  <div>
+  </div> 
   <br>
     <%= f.submit :submit,class:'btn btn-success' %>
-  </div> 
-  </div>
 <% end %>
+
