Devise user profile and authentication

--- a/app/views/products/create.js.erb
+++ b/app/views/products/create.js.erb
@@ -1,2 +1,3 @@
+$("#myModel").modal("hide");
 $("#products_form").hide(); 
 $("#productData").append("<%= j render partial: 'formdata', locals: {product: @product} %>");
