--- a/app/javascript/stylesheets/form.scss
+++ b/app/javascript/stylesheets/form.scss
@@ -18,6 +18,8 @@ body {
   padding: 50px 70px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 }
 
@@ -49,6 +51,10 @@ body {
   border: none;
   color: white;
   margin-top: 20px;
+}
+.registration-form {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .registration-form .social-media {
@@ -99,4 +105,13 @@ body {
     font-size: 30px;
     line-height: 70px;
   }
+}
+
+.nav-link:hover {
+  background-color: white;
+  border-radius: 5px;
+}
+.delete {
+  margin-left: 430px;
+  margin-top: 0px;
 }
