--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
 <div class="main">
 <div class="container">
 <center><h3>Profile Page</h3></center>
- <%= form_with(model:@user, local: false) do |f| %>
+ <%= form_with(model:@user) do |f| %>
   <div class="form-outline mb-2">
       <%= f.label :name, class:'form-label' %>
       <%= f.text_field :name,class:'form-control' %>
