Added product image to products

--- a/app/javascript/stylesheets/userprofile.scss
+++ b/app/javascript/stylesheets/userprofile.scss
@@ -2,7 +2,9 @@ body {
   //   margin-top: 20px;
   background: #f8f8f8;
 }
-.card {
-  margin-top: 20px;
-  margin-right: 200px;
+.user-profile {
+  .card {
+    margin-top: 20px;
+    margin-right: 200px;
+  }
 }
