--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,13 +25,13 @@
              <%= link_to "Product",root_path,class: 'nav-link' %>
           </li>
           <li class="nav-item">
-             <% if user_signed_in? %> 
+             <% if user_signed_in? && current_user.role == "admin" %> 
                <%= link_to "Add product",new_product_path,remote: true,class: 'nav-link' %>
              <% end %> 
           </li>
           <li class="nav-item">
              <% if user_signed_in? %>
-               <%= link_to " Add order",new_order_path,remote: true,class: 'nav-link' %>
+               <%#= link_to " Add order",new_order_path,remote: true,class: 'nav-link' %>
              <% end %> 
           </li>
        </ul>
@@ -44,10 +44,10 @@
             <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                <% if current_user.user_image.attached? %>
                   <% if current_user.user_image.variable? %>
-                      <%= image_tag current_user.user_image.variant(resize_to_fill: [30,30]), class:'rounded-circle' %>
+                    <%= image_tag current_user.user_image.variant(resize_to_fill: [30,30]), class:'rounded-circle' %>
                   <% end %>
                <% else %>
-                      <%= image_tag("default.png", alt: "user", width: "30") %>
+                  <%= image_tag("default.png", alt: "user", width: "30") %>
                <% end %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
