--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -34,6 +34,31 @@
                 </div>
             </div>
         </div>
-      <% end %>
+      <% end %>             
     </div>
 </div>
+
+<div class="text-center">
+    <ul class="pagination justify-content-center">
+       <%== pagy_bootstrap_nav(@pagy) %>    
+    </ul>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
