--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,7 +30,7 @@
                         <i class="fa fa-star star"></i> 
                         <i class="fa fa-star star"></i> 
                     </div>
-                    <button type="button" class="btn bg-cart"></i>Buy now</button>
+                        <%= link_to "Buy now",new_order_path,user_id:current_user, class: 'btn bg-cart'%>
                 </div>
             </div>
         </div>
