Completed buynow function and display data rolewise

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
+@import "toastr";
 // @import "bulma";
 @import "form";
 @import "userprofile";
 @import "product_index";
+@import "order_show";
