--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,51 @@
-<br>
-<div class="container">
-    <%#= link_to "Add Product",new_product_path, remote: true, class: 'btn btn-primary btn-sm' %>
-    <%#= link_to "Add Order", new_order_path, remote: true, class: 'btn btn-primary btn-sm' %>
-    <%#= link_to "Sigh up", new_member_session_path, class: 'btn btn-primary btn-sm' %>
-</div> 
 
+<% @orders.each do |order| %>
+<div class="container mt-5 mb-5">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-10">
+            <div class="row p-2 bg-white border rounded">
+                <div class="col-md-3 mt-1">
+                    <% if order.product.product_image.attached? %>
+                        <% if order.product.product_image.variable? %>
+                             <%= image_tag order.product.product_image, class:'img-fluid img-responsive rounded product-image' %>
+                        <% end %>
+                    <% else %>
+                        <%= image_tag("default.png", alt: "user", class:'img-fluid img-responsive rounded product-image') %>
+                    <% end %>
+                </div>
+                <div class="col-md-6 mt-1">
+                    <h5><%= order.product.name %></h5>
+                    <div class="d-flex flex-row">
+                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
+                    </div>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Order reference ID: </strong><%= order.order_ref %>
+                     </p>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Customer: </strong><%= order.user.firstname.capitalize+''+order.user.lastname.capitalize %>
+                     </p>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Address of delivery: </strong><%= order.address %>
+                     </p>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Payment method: </strong><%= order.payment_type %>
+                     </p>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Total price: </strong><%= order.product.price %>
+                     </p>
+                     <p class="text-justify text-truncate para mb-0">
+                        <strong>Order date: </strong><%= order.created_at.strftime("%d %b %Y") %>
+                     </p>
+                </div>
+        
+            </div>
+        </div>
+    </div>
+</div>
+<% end %>
+
+<div class="text-center">
+    <ul class="pagination justify-content-center">
+       <%== pagy_bootstrap_nav(@pagy) %>    
+    </ul>
+</div>
