--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,7 +30,14 @@
                         <i class="fa fa-star star"></i> 
                         <i class="fa fa-star star"></i> 
                     </div>
-                        <%= link_to "Buy now",new_order_path,user_id:current_user, class: 'btn bg-cart'%>
+                    <% if user_signed_in? && current_user.role == "admin" %> 
+
+                    <% elsif user_signed_in? && current_user.role == "user"%>  
+                        <%= link_to "Buy now",new_order_path(product_id: product.id), class: 'btn bg-cart' %>
+                        <%#= link_to "View order",product_path(product), class: 'btn btn-success btn-sm' %>
+                    <% else %>    
+                        <%= link_to "Buy now",new_user_registration_path, id: 'unauthuser', class: 'btn bg-cart' %>
+                    <% end %> 
                 </div>
             </div>
         </div>
