--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,14 +13,14 @@
                     <% end %>
                 </div>
                 <div class="col-md-6 mt-1">
-                    <h5><%= @product.name %></h5>
+                    <h5><%= order.product.name %></h5>
                     <div class="d-flex flex-row">
                         <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
                     </div>
                      <p class="text-justify text-truncate para mb-0"><strong>Order reference ID: </strong><%= order.order_ref %></p>
                      <p class="text-justify text-truncate para mb-0"><strong>Address of delivery: </strong><%= order.address %></p>
                      <p class="text-justify text-truncate para mb-0"><strong>Payment method: </strong><%= order.payment_type %></p>
-                     <p class="text-justify text-truncate para mb-0"><strong>Total price: </strong><%= @product.price %></p>
+                     <p class="text-justify text-truncate para mb-0"><strong>Total price: </strong><%= order.product.price %></p>
                      <p class="text-justify text-truncate para mb-0"><strong>Order date: </strong><%= order.created_at.strftime("%d %b %Y") %></p>
                 </div>
         
