--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,26 +7,31 @@
 </div>
 <br>
 <%= form_with(model:@product, local: false, class: 'product-form') do |f| %>
-      <div>
-           <%= f.label :Product_image %>
-           <%= f.file_field :product_image, autofocus: true, class:'form-control' %>
-      </div>
-      <br>
-      <div>
-           <%= f.label :name %>
-           <%= f.text_field :name, class:'form-control' %>
-      </div>
-      <br />
-      <div> 
-           <%= f.label :price %> 
-           <%= f.text_field :price,class:'form-control' %>
-      </div>
-      <br />
-      <div>
-           <%= f.label :category_id %><br>
-           <%= f.select :category_id,(Category.all.map{|e| [e.category_name, e.id]}),class:'form-control' %>
-      </div>
-      <br />  
+     <div>
+          <%= f.label :file %>
+          <%= f.file_field :product_csv, autofocus: true, class:'form-control' %>
+     </div>
+     <br>
+     <div>
+          <%= f.label :image %>
+          <%= f.file_field :product_image, autofocus: true, class:'form-control' %>
+     </div>
+     <br>
+     <div>
+          <%= f.label :name %>
+          <%= f.text_field :name, class:'form-control' %>
+     </div>
+     <br />
+     <div> 
+          <%= f.label :price %> 
+          <%= f.text_field :price,class:'form-control' %>
+     </div>
+     <br />
+     <div>
+          <%= f.label :category_id %><br>
+          <%= f.select :category_id,(Category.all.map{|e| [e.category_name, e.id]}),class:'form-control' %>
+     </div>
+     <br />  
           <%= f.submit :submit,class:'btn btn-success' %>
 <% end %>
 
