Cancan gem done with exeception handle.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,13 +30,12 @@
                         <i class="fa fa-star star"></i> 
                         <i class="fa fa-star star"></i> 
                     </div>
-                    <% if user_signed_in? && current_user.role == "admin" %> 
+                    <% if user_signed_in? && current_user.admin? %> 
                       <% if product.product_csv.attached? %>
-                        <%= link_to "View csv", rails_blob_path(product.product_csv, disposition: "attachment"), class: 'btn bg-cart' %>
+                         <%= link_to "View csv", rails_blob_path(product.product_csv, disposition: "attachment"), class: 'btn bg-cart' %>
                       <% end %>
-                    <% elsif user_signed_in? && current_user.role == "user"%>  
+                    <% elsif user_signed_in? && current_user.user? %>
                         <%= link_to "Buy now",new_order_path(product_id: product.id), class: 'btn bg-cart' %>
-                        <%#= link_to "View order",product_path(product), class: 'btn btn-success btn-sm' %>
                     <% else %>    
                         <%= link_to "Buy now",new_user_registration_path, id: 'unauthuser', class: 'btn bg-cart' %>
                     <% end %> 
