--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,6 @@
     </div>
   </div>
 </div>
-
 <!-- navbar setup -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -41,8 +40,8 @@
     <!-- Right elements -->
     <div class="d-flex align-items-center">
       <!-- Avatar -->
-       <% if user_signed_in? %>
-         <div class="dropdown">
+      <% if user_signed_in? %>
+          <div class="dropdown">
             <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                <% if current_user.user_image.attached? %>
                   <% if current_user.user_image.variable? %>
@@ -53,7 +52,7 @@
                <% end %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-               <% if user_signed_in? && current_user.role == "user" %>      
+               <% if user_signed_in? && current_user.role == "user" && current_user.role == " " %>      
                  <li><%= link_to "My order",product_path(current_user),class: 'dropdown-item' %></li>
                <% end %> 
                <% if user_signed_in? && current_user.role == "admin" %>      
@@ -63,11 +62,11 @@
                  <li><%= link_to "Edit profile",edit_user_registration_path,class: 'dropdown-item' %></li>
                  <li><%= link_to "Logout",destroy_user_session_path,method: :delete, class: 'dropdown-item' %></li>
             </ul>
-        </div>
-       <% else %>
+          </div>
+      <% else %>
               <%= link_to "Sign up",new_user_registration_path,class: 'nav-link' %>
               <%= link_to "Sign In",new_user_session_path,class: 'nav-link' %>
-       <% end %>
+      <% end %>
     </div>
   </div>
 </nav>
